<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/langUS"
        android:title="English(US)"
        android:orderInCategory="1"
        android:showAsAction="never" />

    <item android:id="@+id/langUK"
        android:title="@string/uk_string"
        android:orderInCategory="2"
        android:showAsAction="never" />


    <item android:id="@+id/langFrenchCanada"
        android:title="@string/french_ca_string"
        android:orderInCategory="3"
        android:showAsAction="never" />

    <item android:id="@+id/langHindi"
        android:title="@string/hindi_string"
        android:orderInCategory="4"
        android:showAsAction="never" />

    <item android:id="@+id/langFrench"
        android:title="@string/french_string"
        android:orderInCategory="5"
        android:showAsAction="never" />

    <item android:id="@+id/langGerman"
        android:title="@string/german_string"
        android:orderInCategory="6"
        android:showAsAction="never" />

    <item android:id="@+id/langItalian"
        android:title="@string/italian_string"
        android:orderInCategory="7"
        android:showAsAction="never" />

    <item android:id="@+id/langJapan"
        android:title="@string/japan_string"
        android:orderInCategory="8"
        android:showAsAction="never" />


    <item android:id="@+id/langKorean"
        android:title="@string/korean_string"
        android:orderInCategory="9"
        android:showAsAction="never" />



</menu>
